Bug fix: Fixed the jumping of the manual_filelist_setting node in Content Type Filelist settings dialog during slides...

--- a/contenido/styles/content_types/cms_abstract_tabbed.css
+++ b/contenido/styles/content_types/cms_abstract_tabbed.css
@@ -40,7 +40,7 @@
 .cms_abstract .head_sub {
     clear: both;
     font-style: italic;
-    margin: 10px 0 5px;
+    padding: 10px 0 5px;
     font-weight: bold;
 }
 .cms_abstract div + .head_sub {
